# Simpli5.AI

./: .gitignore  README.md  SETUP_WEBHOOK.md  pyproject.toml  requirements.txt
config/: llm_providers.yml  mcp_servers.yml  webhook_config.yml
examples/: simple_server.py  telegram_mcp_server_example.py  telegram_webhook_example.py  test_webhook.py
scripts/: telegram_webhook_example.py
src/: main.py
src/simpli5/: chat.py  cli.py  config.py
src/simpli5/agents/: __init__.py  job_agent.py  models.py  multi_agent_controller.py  new_job_agent.py  weight_management_agent.py
src/simpli5/agents/common/: __init__.py
src/simpli5/agents/common/agents/: __init__.py  conditional_agent.py  (+1 more)
src/simpli5/agents/core/: __init__.py  agents.py  messages.py  steps.py
src/simpli5/host/: __init__.py  prompts.py  resources.py  tools.py
src/simpli5/providers/: mcp_client.py  multi_server.py
src/simpli5/providers/llm/: base.py  groq.py  multi.py  openai_provider.py
src/simpli5/providers/mcp/: https_client.py  multi.py  stdio_client.py
src/simpli5/servers/: __init__.py  base.py  calculator_server.py  cli_server.py  examples.py  fastmcp_server.py  job_agent_server.py  weight_management_agent_server.py
src/simpli5/servers/cli/: __init__.py  server.py  tools.py
src/simpli5/servers/common/: __init__.py  base.py  prompts.py  resources.py  tools.py
src/simpli5/servers/examples/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/simpli5/servers/telegram/: __init__.py  prompts.py  server.py  tools.py
src/simpli5/webhook/: __init__.py  telegram_webhook.py
(+4 files in other folders)
